# ryagotchi

./: .gitignore  CMakeLists.txt  platformio.ini
include/: controller.h  input.h  model.h  view.h
include/images/: Sprite-0001.h  Sprite-0002.h
src/: main.cpp  main.h
utils/: image_convert.py
